--- a/resume.qmd
+++ b/resume.qmd
@@ -2,86 +2,92 @@
 layout: cv
 title: Isaac Newtons's CV
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
+# Emma Kohler
+Student,.
 
 <div id="webaddress">
-<a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
+<a href="emma23engel@gmail.com">emma23engel@gmail.com</a>
 | <a href="http://en.wikipedia.org/wiki/Isaac_Newton">My wikipedia page</a>
 </div>
 
 
 ## Currently
 
-Standing on the shoulders of giants
-
-### Specialized in
-
-Laws of motion, gravitation, minting coins, disliking [Robert Hooke](http://en.wikipedia.org/wiki/Robert_Hooke)
+Pursuing a Bachelors Degree in Data Science at Brigham Young University of Idaho.
 
 
 ### Research interests
 
-Cooling, power series, optics, alchemy, planetary motions, apples.
+Database Engineering, Data Administration, Apperal design, Photography
 
 
 ## Education
 
-`1654-1660`
-__The King's School, Grantham.__
+`2016-2020`
+__Shelley Senior High School, Shelley.__
 
-`June 1661 - now`
-__Trinity College, Cambridge__
+` 2020 - 2024`
+__Brigham Young University of Idaho, Rexburg__
 
-- Sizar
+- Associates degree
 
-`1667 - death`
-__Trinity College, Cambridge__
+`2020 - now`
+__Brigham Young University of Idaho, Rexburg__
 
-- Fellow
+- Working towards Bachelors 
 
 
 
 ## Awards
+MCWIT - Aspirations in computing Award
 
-`2012`
-President, *Royal Society*, London, UK
+### Experience
 
-Associate, *French Academy of Science*, Paris, France
+`May 2024 - July 2024  `
+__BYU Employment ~ Provo, UT: Church Youth Camp Counselor (seasonal position)__
+-Taught groups of youth, individually and with a Co-counselor. 
 
+-Promoted and maintained an uplifting environment aligned with a focus on helping participants grow socially, intellectually, and spiritually. 
 
+`July 2024 - December 2024`
+__Great Harvest ~ Idaho Falls, ID: Baker/Server/Prepper (seasonal position)__
+-Prepped food and drink orders. 
 
-## Publications
+-Oversaw cash and credit interactions.
 
-<!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
+-prepared and baked the product.
 
-### Journals
+`August 2023 - October 2023`
+__CinnaBear Bakery ~ Gardiner, MT: Server/Prepper (seasonal position)__
+-Prepped food and drink orders. 
 
-`1669`
-Newton Sir I, De analysi per æquationes numero terminorum infinitas. 
+-Oversaw cash and credit interactions. 
 
-`1669`
-Lectiones opticæ.
+`July 2021 - December 2022`
+__The Church of Jesus Christ of Latter-day Saints ~ Fort Worth, TX: Volunteer Representative__  
+-Trained new, incoming volunteers in the type of work done.  
 
-etc. etc. etc.
+-Participated in leadership roles. 
 
-### Patents
+-Planned and carried out lessons for groups ranging from very large to individual basis. 
 
-`2012`
-Infinitesimal calculus for solutions to physics problems, [SMBC](http://www.techdirt.com/articles/20121011/09312820678/if-patents-had-been-around-time-newton.shtml) patent 001
+`May 2020 - August 2020`
+__Snogo Shaved Ice ~ Shelley, ID: Server/Prepper (seasonal position)__
+-Offered a promotion to manager after my first summer of working here. 
 
+-Managed workplace individually during shifts and oversaw cash and credit interactions. 
+
+`May 2019 - August 2019`
+__Apple Athletic Club ~ Idaho Falls, ID — Summer Day Camp Counselor (seasonal position)__
+-Planned, organized, and facilitated camp activities for 50 kids for an entire week. 
+
+-Worked flexibly with co-workers to meet the needs of campers, parents, and gym members. 
+
+-Helped participants enjoy activities while ensuring adherence to protocol. 
 
 ## Occupation
 
-`1600`
-__Royal Mint__, London
-
-- Warden
-- Minted coins
-
-`1600`
-__Lucasian professor of Mathematics__, Cambridge University
-
+__Student__, Rexburg
 
 
 <!-- ### Footer
